Remove /healthz from swagger spec
